<resources>
    <string name="app_name">Coucou App</string>
    <string name="no_internet">Make you sure you are connected with internet</string>
    <string name="slow_internet">Your internet connection is very slow</string>
    <string name="server_error">Server Error</string>
    <string name="msg_empty_email">Please enter email address.</string>
    <string name="msg_valid_email">Please enter valid email address.</string>
    <string name="msg_empty_password">Please enter password.</string>
    <string name="msg_empty_confirm_password">Please enter confirm password.</string>
    <string name="msg_empty_name">Please enter username.</string>
    <string name="msg_empty_phone">Please enter phone number.</string>
    <string name="msg_password_must_be_same">Password and Confirm Password must be same.</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel odio sit amet sapien porttitor blandit in eu ipsum.</string>
    <string name="save_lend_build_trust">Save. Lend. Build Trust</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="or_connect_using">Or connect using</string>
    <string name="skip">SKIP</string>
    <string name="build_your_">Build your credit score easily for bigger bank loans</string>
    <string name="enjoy_peer_">Enjoy peer-to-peer lending with your friends and family</string>
    <string name="easily_get_">Easily get a loan or cash from peers faster than your bank</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify_code">Verify Code</string>
    <string name="we_just_want_to_make_sure_it_s_you">We just want to make sure it\'s you</string>
    <string name="enter_the_code_we_just_sent_you_below">Enter the code we just sent you below</string>
    <string name="_continue">Continue</string>
    <string name="enter_the_c">Enter the code we just sent you below. We just want to make sure it\u00E2\u0080\u0099s you.</string>
    <string name="user_verified">User Verified</string>
    <string name="user_verified_details">User has now been verified. You can use the application now.</string>
    <string name="password_changed_successfully">Password Changed Successfully</string>
    <string name="otp_verific">OTP Verification</string>
    <string name="password_changed_successfully_details">Your password has been changed. Navigate to profile to make another corrections</string>
    <string name="login">Login</string>
    <string name="forgotten_password">Forgotten Password</string>
    <string name="enter_e_mail_address">Enter e-mail address</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="send">Send</string>
    <string name="reset_password">Reset Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="saving_group">Saving Group</string>
    <string name="setting">Setting</string>
    <string name="hello_micha">Hello! Michael</string>
    <string name="these_are_all_the_savings_groups_available_to_you_as_well_as_those_you_are_part_of">These are all the savings groups available to you as well as those you are part of</string>
    <string name="next_payment">Next payment</string>
    <string name="hk_1_500_00">HK$ 1,500.00</string>
    <string name="amount_due">Amount due</string>
    <string name="friends">Friends</string>
    <string name="my_current_savings_groups">My current savings groups</string>
    <string name="romanus">Romanus</string>
    <string name="join_a_public_group">Join a public group</string>
    <string name="view_all">View all</string>
    <string name="use_this_fe">Use this feature to create your own savings group. You can create your own savings group, add friends and families and engage in a closed rotating savings.</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="contributions">Contributions:</string>
    <string name="start_date">Start date:</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="verify_your_profile">Verify your profile</string>
    <string name="coucou_cash">Coucou Cash</string>
    <string name="group_name">Group Name</string>
    <string name="members_00_">00 Members, 00 Months</string>
    <string name="savings_tar">Savings target: HK$ 10,000.00</string>
    <string name="this_is_a_p">This is a public savings group available to anyone. To be part of this group you must send a request and the admin will add you based on your trust score</string>
    <string name="monthly_savings">Monthly savings</string>
    <string name="status">Status</string>
    <string name="open">Open</string>
    <string name="total_savings">Total savings</string>
    <string name="hk_123_000_00">HK$123,000.00</string>
    <string name="hk_1_300_00">HK$1,300.00</string>
    <string name="members">Members</string>
    <string name="end_date">End date</string>
    <string name="_12_01_2022">12|01|2022</string>
    <string name="make_public">Make public</string>
    <string name="add_members">add members</string>
    <string name="number_of_members_allowed">Number of members allowed</string>
    <string name="create_a_new_group">Create a new group</string>
    <string name="you_are_about_to_create_a_new_savings_group_you_u00e2_u0080_u0099ve_currently_added_0_members_to_this_group">You are about to create a new savings group. You have currently added 0 members to this group.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="create_group">You have created a new group</string>
    <string name="create_group_description">Your new group has been created successfully. You can keep adding more members.</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="most_popular_cards">Most popular cards</string>
    <string name="min_annual_income">Min annual income</string>
    <string name="apr">APR</string>
    <string name="review">Review</string>
    <string name="apply">Apply</string>
    <string name="investments">Investments</string>
    <string name="investment">Investment</string>
    <string name="loan_instrument">Loan instruments</string>
    <string name="most_popular_investments">Most popular investments</string>
    <string name="loan_products">Loan products</string>
    <string name="most_popular_loan_products">Most popular loan products</string>
    <string name="auto_loan">Auto Loan</string>
    <string name="citibank">Citibank</string>
    <string name="_24_months">24 Months</string>
    <string name="stock_trading">Stock trading</string>
    <string name="stock_accounts_to_trade_hk_and_us_stocks_available_in_the_app">Stock accounts to trade HK and US stocks available in the app</string>
    <string name="your_saving_group">Your Savings Groups</string>
    <string name="profile_verification_detail">We are required by law to identify your identity before you can use this app efficiently</string>
    <string name="done">Done</string>
    <string name="facial_verification">Facial verification</string>
    <string name="address_verification">Address verification</string>
    <string name="id_verification">ID verification</string>
    <string name="address_verification_detail">Verifying your residential address is required to access the full functionality of the app. Use any of these options to verify you residentional address.</string>
    <string name="upload_your_document">Upload your document</string>
    <string name="upload_a_bank_statement_or_a_rental_document">Upload a bank statement or a rental document</string>
    <string name="scan_your_residential_document">Scan your residential document</string>
    <string name="scan_the_physical_document_directly_into_the_app">Scan the physical document directly into the app</string>
    <string name="pin_your_location_on_the_map">Pin your location on the map</string>
    <string name="identify_your_residential_address_on_the_map">Identify your residential address on the map</string>
    <string name="your_savings_groups">Your Savings Groups</string>
    <string name="create_a_group">Create a group</string>
    <string name="public_group">Public groups</string>
    <string name="market_place">Market place</string>
    <string name="verification">Verification</string>
    <string name="proof_of_residence">Proof of Residence</string>
    <string name="filter_credit_cards">Filter credit cards</string>
    <string name="annual_fee">Annual fee</string>
    <string name="annual_fee_chip">+ annual fee</string>
    <string name="deposit">Deposit</string>
    <string name="cash_back">Cash back</string>
    <string name="interest_rate">Interest rate</string>
    <string name="credit_score">Credit score</string>
    <string name="student_credit_card">+ student credit card</string>
    <string name="credit_building">+ credit building</string>
    <string name="reward">+ reward</string>
    <string name="travel">+ travel</string>
    <string name="your_contac">Your contacts</string>
    <string name="credit_deta">Credit details</string>
    <string name="balance_transfer">+ balance transfer</string>
    <string name="apply_filter">Apply filter</string>
    <string name="credit_card_filter">This option lists all the credit cards that are available for users to apply to</string>
    <string name="search_in_contacts">Search in contacts</string>
    <string name="filter">Filter</string>
    <string name="investment_title">Find in the lists all the investment opportunities that are available for users to apply to</string>
    <string name="filter_loan">Filter loans</string>
    <string name="annual_interest_rate">Annual Interest rate</string>
    <string name="initial_deposit">Initial deposit</string>
    <string name="monthly_repayment_amount">Monthly repayment amount</string>
    <string name="for_students">for students</string>
    <string name="personal_loan">Personal loan</string>
    <string name="for_projects">for projects</string>
    <string name="no_penalty">no penalty</string>
    <string name="instant_approval">instant approval</string>
    <string name="no_handling_fee">no handling fee</string>
    <string name="max_amount">Max amount</string>
    <string name="hk_24_000_00">HK$24,000.00</string>
    <string name="_7_04">7.04%</string>
    <string name="period_m">Period/m</string>
    <string name="processing_fee">Processing fee</string>
    <string name="about_this_loan">About this Loan</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="bank_account">Bank Account</string>
    <string name="choose_payment_channel">Choose payment channel</string>
    <string name="choose_your_bank">Choose your bank</string>
    <string name="fps_identifier">FPS Identifier</string>
    <string name="personal_lo">Personal Loan</string>
    <string name="credit_card">Credit Card</string>
    <string name="card_number">Card number</string>
    <string name="_0000">**** **** **** 0000</string>
    <string name="payment_dat">Payment date:</string>
</resources>