<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/group_background">

            <TextView
                android:id="@+id/tv_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open"
                android:textColor="@color/silverTree"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_group_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_name"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/darkGray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_open" />

            <TextView
                android:id="@+id/tv_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/members_00_"
                android:layout_marginTop="@dimen/_2sdp"
                android:textColor="@color/primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_group_name" />

            <TextView
                android:id="@+id/tv_saving_target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/savings_tar"
                android:layout_marginTop="@dimen/_2sdp"
                android:textColor="@color/darkGray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_member" />

            <TextView
                android:id="@+id/tv_member_00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/savings_tar"
                android:layout_marginTop="@dimen/_2sdp"
                android:textColor="@color/darkGray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_saving_target" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>